fix: 关闭一些流